--- a/branches/gui/src/uk/me/parabola/mkgmap/gui/MainFileList.form
+++ b/branches/gui/src/uk/me/parabola/mkgmap/gui/MainFileList.form
@@ -2,18 +2,17 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="uk.me.parabola.mkgmap.gui.MainFileList">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="745" height="602"/>
+      <xy x="20" y="20" width="716" height="554"/>
     </constraints>
     <properties/>
-    <border type="empty"/>
+    <border type="empty" title="Files to convert to Garmin format"/>
     <children>
       <scrollpane id="659a4">
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="7" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="4" col-span="7" vsize-policy="7" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.5" weighty="0.0"/>
         </constraints>
         <properties>
-          <opaque value="true"/>
           <verticalScrollBarPolicy value="22"/>
         </properties>
         <border type="none"/>
@@ -23,6 +22,7 @@
             <properties>
               <fillsViewportHeight value="true"/>
               <intercellSpacing width="1" height="4"/>
+              <preferredScrollableViewportSize width="450" height="200"/>
               <showVerticalLines value="false"/>
             </properties>
             <clientProperties>
@@ -41,9 +41,15 @@
           <text resource-bundle="uk/me/parabola/mkgmap/gui/MainFileList" key="label.create.map"/>
         </properties>
       </component>
+      <hspacer id="79fc7">
+        <constraints>
+          <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+      </hspacer>
       <component id="1b871" class="javax.swing.JButton" binding="addButton" default-binding="true">
         <constraints>
-          <grid row="2" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -56,12 +62,15 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
       </vspacer>
-      <hspacer id="79fc7">
+      <component id="7b319" class="javax.swing.JButton" binding="removeButton" default-binding="true">
         <constraints>
-          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="10" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
         </constraints>
-      </hspacer>
+        <properties>
+          <text value="Remove"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
