--- a/branches/gui/src/uk/me/parabola/mkgmap/gui/AppLayout.form
+++ b/branches/gui/src/uk/me/parabola/mkgmap/gui/AppLayout.form
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="uk.me.parabola.mkgmap.gui.AppLayout">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="577" height="575"/>
+      <xy x="20" y="20" width="652" height="527"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <alignmentX value="0.0"/>
+      <alignmentY value="0.0"/>
+    </properties>
+    <border type="line"/>
     <children>
       <nested-form id="ac253" form-file="uk/me/parabola/mkgmap/gui/MainFileList.form">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="1.0" weighty="0.0"/>
-        </constraints>
+        <constraints border-constraint="North"/>
       </nested-form>
       <nested-form id="9257e" form-file="uk/me/parabola/mkgmap/gui/FileOptions.form">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="1.0" weighty="0.0"/>
-        </constraints>
+        <constraints border-constraint="Center"/>
       </nested-form>
     </children>
   </grid>
